hphp/hack/test/typecheck/typedef2.php.exp
File "typedef2.php", line 16, characters 20-28:
Expected a `class` but got a type alias. (Naming[2052])
File "typedef2.php", line 14, characters 6-14:
Alias definition is here.
